[package]
name = "humanRustTD"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "humanRustTD"
test = false

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
nrf52840-hal = "0.19.0"
embedded-hal = "1.0.0"
panic-halt = "1.0.0"
nrf52840-pac = "0.12.2"
defmt-serial = "0.12.0"

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
